# cpp_jenkins_vcpkg_example

./: .gitignore  CMakeLists.txt  Jenkinsfile  Jenkinsfile.compact_steps  README.md  ci.bat  ci.sh  jenkins.sh
.ci/: Dockerfile.ubuntu-bionic  Dockerfile.ubuntu-focal  Dockerfile.ubuntu-jammy  Dockerfile.ubuntu-xenial
example/: CMakeLists.txt
example/include/example/: example.h
example/src/: example.cpp
example_app/: CMakeLists.txt
example_app/src/: example_app.cpp
example_tests/: CMakeLists.txt  perform_clever_computation.cpp  perform_important_computation.cpp
